# UT99-x64

./: .gitignore  README.md  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/ast/ut99/: GameActivity.java  MainActivity.java  UT99Paths.java
tools/: apply_overrides.ps1  fetch_deps.ps1
